github_data_collector/src/data/issue_comment/SciRuby_sciruby.txt
I am trying to install SciRuby on Mac machine but the installation failed. I have searched this issue but didn't help much and the issued were related to a different error.
<br/>
when I used the command
```
gem install sciruby
Successfully installed sciruby-0.2.11
Parsing documentation for sciruby-0.2.11
Done installing documentation for sciruby after 0 seconds
1 gem installed
```
It successfully installed it. But when I used the command
```
gem install sciruby-full
```
I get this error

```
Building native extensions. This could take a while...
ERROR:  Error installing sciruby-full:
	ERROR: Failed to build gem native extension.

    current directory: /Library/Ruby/Gems/2.6.0/gems/ruby-minisat-2.2.0/ext/minisat
/System/Library/Frameworks/Ruby.framework/Versions/2.6/usr/bin/ruby -I /System/Library/Frameworks/Ruby.framework/Versions/2.6/usr/lib/ruby/2.6.0 -r ./siteconf20191203-21492-19ae7a3.rb extconf.rb
checking for -lminisat... no
checking for -lstdc++... yes
creating Makefile

current directory: /Library/Ruby/Gems/2.6.0/gems/ruby-minisat-2.2.0/ext/minisat
make "DESTDIR=" clean

current directory: /Library/Ruby/Gems/2.6.0/gems/ruby-minisat-2.2.0/ext/minisat
make "DESTDIR="
compiling minisat.c
compiling minisat-wrap.cpp
In file included from minisat-wrap.cpp:35:
In file included from ./../../minisat/minisat/core/Solver.h:24:
./../../minisat/minisat/mtl/Vec.h:99:97: warning: '&&' within '||' [-Wlogical-op-parentheses]
    if (add > INT_MAX - cap || ((data = (T*)::realloc(data, (cap += add) * sizeof(T))) == NULL) && errno == ENOMEM)
                            ~~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~
./../../minisat/minisat/mtl/Vec.h:99:97: note: place parentheses around the '&&' expression to silence this warning
    if (add > INT_MAX - cap || ((data = (T*)::realloc(data, (cap += add) * sizeof(T))) == NULL) && errno == ENOMEM)
                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~
In file included from minisat-wrap.cpp:35:
In file included from ./../../minisat/minisat/core/Solver.h:27:
./../../minisat/minisat/utils/Options.h:63:44: warning: '&&' within '||' [-Wlogical-op-parentheses]
            return test1 < 0 || test1 == 0 && strcmp(x->type_name, y->type_name) < 0;
                             ~~ ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./../../minisat/minisat/utils/Options.h:63:44: note: place parentheses around the '&&' expression to silence this warning
            return test1 < 0 || test1 == 0 && strcmp(x->type_name, y->type_name) < 0;
                                           ^
                                (                                                   )
In file included from minisat-wrap.cpp:35:
In file included from ./../../minisat/minisat/core/Solver.h:28:
./../../minisat/minisat/core/SolverTypes.h:50:16: error: friend declaration specifying a default argument must be a definition
    friend Lit mkLit(Var var, bool sign = false);
               ^
./../../minisat/minisat/core/SolverTypes.h:58:14: error: friend declaration specifying a default argument must be the only declaration
inline  Lit  mkLit     (Var var, bool sign) { Lit p; p.x = var + var + (int)sign; return p; }
             ^
./../../minisat/minisat/core/SolverTypes.h:50:16: note: previous declaration is here
    friend Lit mkLit(Var var, bool sign = false);
               ^
2 warnings and 2 errors generated.
make: *** [minisat-wrap.o] Error 1

make failed, exit code 2

Gem files will remain installed in /Library/Ruby/Gems/2.6.0/gems/ruby-minisat-2.2.0 for inspection.
Results logged to /Library/Ruby/Gems/2.6.0/extensions/universal-darwin-19/2.6.0/ruby-minisat-2.2.0/gem_make.out
```
I am using 
```
ProductName: Mac OS X
ProductVersion: 10.15.1
```
```
ruby 2.6.3p62 (2019-04-16 revision 67580) [universal.x86_64-darwin19]
```
```
Apple clang version 11.0.0 (clang-1100.0.33.12)
```

I think the error is due to `gcc` or `clang` related things.
Assuming this project is moribund.. too bad Ruby crushes python.
Here's the log https://gist.github.com/lokeshh/2965832ed4f1cb718723bfe2b709a6af

The Dockerfile I used:

```Docker
FROM jupyter/base-notebook:latest

USER root

RUN apt-get update && \
    apt-get install -y build-essential \
        ruby2.5 ruby2.5-dev libzmq3-dev gnuplot-nox libgsl-dev libtool autoconf make \
        automake zlib1g-dev libsqlite3-dev libmagick++-dev imagemagick \
        libatlas-base-dev g++ libczmq-dev libffi-dev libtool-bin cmake git && \
        apt-get clean

# See https://github.com/methodmissing/rbczmq/issues/64
RUN CPPFLAGS='-Wno-error=deprecated-declarations' gem install rbczmq -v '1.7.9'

RUN gem update --no-document --system && gem install --no-document sciruby-full

USER $NB_UID

RUN iruby register --force

COPY . .

ENTRYPOINT jupyter-notebook
```

It seems to me the problem is with `gsl` gem.
fixes https://github.com/SciRuby/sciruby/issues/52
Since development is done on GitHub, I suggest using https://gitter.im/home/ as a discussion platform. It's very similar to Slack but without the limits on the number of users or messages. The Jupyter project is very active there and Daru has a "room" there as well (https://gitter.im/v0dro/daru). Like Slack, it offers a great platform for developers and users to communicate in real-time. A room could be created for each SciRuby repo or more if needed.

Trying to install sciruby-full-0.2.11 on macOS Sierra: For some reason the gem installer forces the gsl-2.1.0 gem, while that gem version is not compatible with the recent version of the GSL library (2.3). Homebrew can only install the latest version of GSL on Mac, so for now it is not possible to install sciruby-full on a Mac if one uses Homebrew for installing library requirements. 

Btw, gsl-2.1.0.2 gem adds a patch to fix the issue.